--- a/src/main/resources/assets/dreamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dreamcraft/lang/en_US.lang
@@ -1791,6 +1791,10 @@ dreamcraft.welcome.report_bug=Please report bugs on GitHub:
 dreamcraft.welcome.click_github=Click to open the GitHub!
 dreamcraft.welcome.visitdiscord=Visit our Discord at
 dreamcraft.welcome.click_discord=Click to open Discord!
+dreamcraft.welcome.open_to_lan=Connected to Open to LAN server. This is not officially supported. Expect more bugs than usual
 
 dreamcraft.pausemenu.bug=Report a Bug
 dreamcraft.pausemenu.wiki=Open the Wiki
+dreamcraft.pausemenu.sharetolan.tooltip=§cOpen to LAN is buggy in GTNH§r\nInstead, set up a dedicated server for multiplayer\nCheck the wiki for instructions\nYou can run the server in parallel with the\ngame client on the same computer
+
+dreamcraft.gui.sharetolan.message=§cOpen To LAN can break the GTNH questbook.§r Consider setting up a dedicated server
