Rename UnfiredSlimeSoulBrick as UnfiredSlimeSoilbrick (#1396)
Co-authored-by: Martin Robertz <dream-master@gmx.net>

--- a/src/main/resources/assets/dreamcraft/lang/zh_CN.lang
+++ b/src/main/resources/assets/dreamcraft/lang/zh_CN.lang
@@ -188,7 +188,7 @@ item.UnfiredClayBrick.name=未烧制的粘土砖
 item.UnfiredSearedBrick.name=未烧制的焦黑砖
 item.UnfiredCokeOvenBrick.name=未烧制的焦炉砖
 item.HotNetherrackBrick.name=炙热的炼狱砖
-item.UnfiredSlimeSoulBrick.name=未烧制的史莱姆砖
+item.UnfiredSlimeSoilBrick.name=未烧制的史莱姆土砖
 item.CokeOvenBrick.name=焦炉砖
 item.CokeOvenBrickDust.name=焦炉砖粉
 item.AdvancedCokeOvenBrick.name=高级焦炉砖
