add NAN certificate item

--- a/src/main/resources/assets/dreamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dreamcraft/lang/en_US.lang
@@ -451,6 +451,7 @@ item.CoinWitchII.name=Coin "Spirit 100"
 item.CoinWitchIII.name=Coin "Spirit 1000"
 item.CoinWitchIV.name=Coin "Spirit 10K"
 item.CoinDonation.name=Donation Coin
+item.NANCertificate.name=Certificate of not being a noob anymore
 item.IchoriumCap.name=Ichorium Cap
 item.WetTofu.name=Wet Tofu
 item.NetherStarFragment.name=Nether Star Fragment
