Localize item tooltips.

--- a/src/main/resources/assets/dreamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dreamcraft/lang/en_US.lang
@@ -299,6 +299,9 @@ item.OvenGlove_1_0.name=Pizza Glove (Right hand)
 item.OvenGlove_1_1.name=Cake Glove (Right hand)
 item.OvenGlove_1_2.name=Lava Glove (Right hand)
 item.OvenGlove_1_3.name=BBQ Glove (Right hand)
+item.OvenGlove.desc.1=Protecting your fingers since 1890
+item.OvenGlove.desc.2=Durability: %s/%s
+item.OvenGlove.desc.broken=This glove is too damaged to protect you. You need to repair it.
 item.SodiumPotassium_bucket.name=Bucket of Sodium Potassium (NaK)
 item.PotassiumHydroxideDust.name=Potassium Hydroxide Dust
 item.ElectrotineWire.name=Electrotine Wire
@@ -351,12 +354,16 @@ item.MoldFormHelmet.name=Casting Form (Helmet Mold)
 item.MoldHelmet.name=Mold (Helmet)
 item.MoldFormLeggings.name=Casting Form (Leggings Mold)
 item.MoldLeggings.name=Mold (Leggings)
+item.QuantumBread.name=Quantum Bread
 item.QuantumBread_0.name=Quantum Sliced Bread
 item.QuantumBread_1.name=Quantum Bread
+item.QuantumBread.desc=...wasn't it sliced just a second ago?
 tile.AdminsBedrockLamp.name=Admin's Bedrock Lamp
 tile.BoringBlock.name=Just A Boring Block...
 tile.CompressedGraphite.name=Compressed Graphite
 item.WitherProtectionRing.name=Wither Protection Ring
+item.WitherProtectionRing.desc.1=Finally, a way to get rid of the nasty withering effect.
+item.WitherProtectionRing.desc.2=Now it's time to get some Stars!
 tile.babyChest.name=Baby Chest
 item.NagaScaleChip.name=Naga Scale Chip
 item.NagaScaleFragment.name=Naga Scale Fragment
