Fix more mistakes

--- a/src/main/resources/assets/dreamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dreamcraft/lang/en_US.lang
@@ -248,7 +248,7 @@ tile.SandClayMix.name=Sand Clay Mix
 tile.ZincGravelOre.name=Zinc Gravel Ore
 tile.CallistoColdIce.name=Callisto Cold Ice Block
 tile.Ledox.name=Block of Ledox
-tile.MysteriousCrystal.name=Mysterious Crystal Block
+tile.MysteriousCrystalBlock.name=Mysterious Crystal Block
 tile.Mytryl.name=Block of Mytryl
 tile.Quantinum.name=Block of Quantium
 tile.PistonBlock.name=Piston Block
