--- a/src/main/resources/assets/dreamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dreamcraft/lang/en_US.lang
@@ -1807,7 +1807,7 @@ dreamcraft.command.customdrops.usage=/customdrops reload|toggleinfo
 dreamcraft.command.customfuels.usage=/customfuels reload
 dreamcraft.command.customtooltips.usage=/customtooltips reload
 dreamcraft.command.hazarditems.usage=/hazarditems save|listdamagesources|listpotions|reload [force]
-dreamcraft.command.hazarditems.damage_source_list=Valid DamageTypes are: inFire, onFire, lava, inWall, drown, starve, cactus, fall, outOfWorld, generic, magic, wither, anvil, fallingBlock
+dreamcraft.command.hazarditems.damage_source_list=Valid DamageTypes are: %s
 dreamcraft.command.hazarditems.save.success=Config has been saved.
 dreamcraft.command.hazarditems.save.failure=Config could not be saved. Check your logfiles.
 dreamcraft.command.hazarditems.reload.unsafe=Config file has changed and was not saved yet. To confirm the reload, type /hazarditems reload force
