De-Yamcl-ify some more code.

--- a/src/main/resources/assets/dreamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dreamcraft/lang/en_US.lang
@@ -1815,3 +1815,7 @@ dreamcraft.command.hazarditems.potion.header=List of Loaded Potions:
 dreamcraft.command.hazarditems.potion.entry= - %s - ID %s
 dreamcraft.command.reload.success=Reload complete. New config is activated.
 dreamcraft.command.reload.failure=Reload failed. Check your log for syntax errors.
+
+dreamcraft.customdrops.log_kill=Killed entity: [%s]
+dreamcraft.customdrops.debug.on=Death-Debug is now enabled
+dreamcraft.customdrops.debug.off=Death-Debug is now disabled
